@@ -21,7 +21,7 @@
   see http://www.jayasoft.org/ivy/doc/configuration
   -->
   <!-- you can override this property to use mirrors
-          http://repo1.maven.org/maven2/
+          https://repo1.maven.org/maven2/
           http://mirrors.dotsrc.org/maven2
           http://ftp.ggi-project.org/pub/packages/maven2
           http://mirrors.sunsite.dk/maven2
